Add Railway deployment configuration and database integration
- Created railway.toml for Railway deployment settings including health checks and environment variables.
- Implemented railway_main.py as the entry point for the Railway deployment, launching the Gradio UI.
- Updated requirements.txt to include psycopg2 for PostgreSQL database support.
- Enhanced config.py to manage Railway volume paths for persistent storage.
- Developed database_manager.py for managing user sessions, document metadata, and conversation history in PostgreSQL.
- Refactored dialogue_generator.py to improve source information extraction.
- Modified persistence.py to support index creation from uploaded files and maintain backward compatibility.
- Updated tutor_engine.py to integrate database management and user session handling.
- Created gradio_ui_railway.py for a Railway-ready Gradio UI with file upload and session management features.

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,23 @@
 # PolyGlot Socratic Tutor - Environment Configuration
 # Copy this file to .env and fill in your API keys
 
-# Google AI (Gemini) API Key
-# Get from: https://makersuite.google.com/app/apikey
+# Required API Keys
 GOOGLE_API_KEY="your_google_api_key_here"
-
-# Voyage AI API Key (for embeddings)
-# Get from: https://dash.voyageai.com/
 VOYAGE_API_KEY="your_voyage_api_key_here"
-
-# LlamaCloud API Key (for document parsing)
-# Get from: https://cloud.llamaindex.ai/
 LLAMA_CLOUD_API_KEY="your_llamacloud_api_key_here"
 
-# Optional: Railway deployment environment
-# RAILWAY_ENVIRONMENT=true
+# Railway Production Settings
+# Database (Railway provides this automatically)
+DATABASE_URL="postgresql://username:password@host:port/database"
+
+# Railway Volume (Railway provides this automatically)
+RAILWAY_VOLUME_MOUNT_PATH="/app/data"
+
+# Optional Development Settings
+DEBUG_MODE="false"
+PORT="7860"
+
+# Local Development Overrides (only for local testing)
+# Uncomment these for local development without Railway
+# DATABASE_URL="postgresql://localhost:5432/rag_tutor_dev"
+# RAILWAY_VOLUME_MOUNT_PATH="./local_data"
