--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,10 @@ llama-cloud>=0.0.6
 llama-cloud-services>=0.1.0  
 sqlalchemy>=2.0.0
 
+# Database support for Railway
+psycopg2-binary>=2.9.0  # PostgreSQL adapter
+psycopg2>=2.9.0
+
 # UI framework
 gradio>=4.0.0
 
